--- a/css/styleejercicios.css
+++ b/css/styleejercicios.css
@@ -21,7 +21,7 @@ header h1 {
 }
 
 nav ul {
-    list-style-type: none;
+    list-style: none;
     margin: 0;
     padding: 0;
 }
@@ -41,7 +41,7 @@ nav ul li a:hover {
 }
 
 .menu {
-    list-style-type: none;
+    list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
@@ -53,7 +53,7 @@ nav ul li a:hover {
 
 .menu li a {
     text-decoration: none;
-    color: #ffffff;
+    color: #fff;
 }
 
 .menu li a:hover {
@@ -69,7 +69,7 @@ main {
     flex: 1;
     padding: 1rem;
     margin: 0 auto;
-    max-width: 10000px;
+    max-width: 1000px;
 }
 
 #instrucciones {
